--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@
                                                                                                    src="WalletAPI_wallets_files/midas-wallet-5c5057d972ca621414f077541845fc61.png"
                                                                                                    alt="Midas Wallet">
                                         </div>
-                                        <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Midas Wallet</div>
+                                        <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Coinbase Wallet</div>
                                     </div>
 
                                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
